Fixes #5: Allow CRFs to parse on Dates. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@30 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1099,6 +1099,7 @@ page_close_automatically = This page will be closing automatically.
 
 item_initially_entered_on = This item was initially entered on
 no_changed_made_since_item_initially_entered_on = No changes have been made to this data point since it was initially entered on
+OCRERR_DATE_SHOULD_BE_ENTERED=Date should be entered
 OCRERR_CANT_GET_SUBJEC_DOB=Can't determine the subject's date of birth.  Please check the value or the study parameter configurations.
 OCRERR_CANT_GET_SUBJECT_ENROLLMENT=Can't determine the subject's entrollment date.  Please check the value or the study parameter configurations.
 OCRERR_0001= Logic Error, {0} and {1} cannot be used with the {2} operator.
