Fixes #70 and #119: database changes for each issue.  Submitted by sergey and igor.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@63 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/terms.properties
@@ -22,6 +22,8 @@ Data_Entry_Person = Data Entry Person
 
 Demographic = Demographic
 
+Dynamic_Visit = Dynamic Visit
+
 ED = ED
 
 Failed_Validation_Check = Failed Validation Check
