--- a/core/src/main/java/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/terms_en.properties
@@ -37,6 +37,7 @@ Demographic = Demographic
 deploy = deploy
 director = director
 double_data_entry = double data entry
+Dynamic_Visit = Dynamic Visit
 ED = ED
 ed = ed
 edit = edit
