--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -22,6 +22,8 @@ Data_Entry_Person = Data Entry Person
 
 Demographic = Demographic
 
+Dynamic_Visit = Dynamic Visit
+
 ED = ED
 
 Failed_Validation_Check = Failed Validation Check
