Minor Fix #121: Changing Dynamic Visits to Dynamic Groups. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@100 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/terms.properties
@@ -22,7 +22,7 @@ Data_Entry_Person = Data Entry Person
 
 Demographic = Demographic
 
-Dynamic_Visit = Dynamic Visit
+Dynamic_Group = Dynamic Group
 
 ED = ED
 
