--- a/core/src/main/java/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/terms_en.properties
@@ -37,7 +37,7 @@ Demographic = Demographic
 deploy = deploy
 director = director
 double_data_entry = double data entry
-Dynamic_Visit = Dynamic Visit
+Dynamic_Group = Dynamic Group
 ED = ED
 ed = ed
 edit = edit
