--- a/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -22,7 +22,7 @@ Data_Entry_Person = Data Entry Person
 
 Demographic = Demographic
 
-Dynamic_Visit = Dynamic Visit
+Dynamic_Group = Dynamic Group
 
 ED = ED
 
