Fixes #143, submit all Create screens for Dynamic Groups. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@107 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/page_messages.properties
@@ -598,6 +598,8 @@ please_contact_sysadmin_for_more_information = Please contact the System Adminis
 
 please_contact_sysadmin_questions = Please contact the System Administrator if you have questions.
 
+please_correct_the_duplicate_name_found_in_row = Please correct the duplicate name found in row 
+
 please_review_the_data_html = Please review the data, or modify the files accordingly so that they can be imported.<br/>
 
 please_select_the_link_below_dn = Please select the link below to view the information provided. You may need to login to ClinCapture with your user name and password after selecting the link. If you receive a page cannot be displayed message, please make sure to select the Change Study/Site link in the upper right table of the page, select the study referenced above, and select the link again.
