--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -18,6 +18,8 @@ anwer_not_match = Your answers for this value did not match.  Please provide ans
 
 argument = argument
 
+at_least_one_element_should_be_selected = At least one element should be selected
+
 begin_data_entry_without_event_but_CRF = You are trying to begin data entry for a CRF within a Study Event, but the specified CRF version does not exist.
 
 begin_data_entry_without_event_but_especified_event = You are trying to begin data entry for a CRF within a Study Event, but the specified study event definition does not exist within the study.
