--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -87,6 +87,8 @@ and_all_associated_event_data_restored_to_study = \ and all associated Event dat
 
 and_item = ' and item '
 
+at_least_one_element_should_be_selected = At least one element should be selected
+
 at_row = at row
 
 before_you_continue = before you continue.
@@ -603,6 +605,8 @@ please_contact_owner_to_delete = , please contact the owner to delete the previo
 please_contact_sysadmin_for_more_information = Please contact the System Administrator for more information.
 
 please_contact_sysadmin_questions = Please contact the System Administrator if you have questions.
+
+please_correct_the_duplicate_name_found_in_row = Please correct the duplicate name found in row
 
 please_write_down_the_password_and_provide = \ Please write down the password and provide it directly to the user.
 
