--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -763,6 +763,8 @@ date_year_of_birth = Date/Year of Birth
 
 dear = Dear\t
 
+default = Default
+
 default_active_study = Default Active Study
 
 default_value = Default Value
