Fixes #144, submit all View screens for Dynamic Groups. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@108 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2250,6 +2250,8 @@ total_items = Total Items
 
 type = Type
 
+unavailable = Unavailable
+
 uncompleted_items = Uncompleted Items
 
 unique_identifier = Unique Identifier
