Fixes #134: addition of database and create/update screens for Study Events. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@117 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -383,4 +383,5 @@ removed_crf = Case report form is removed
 
 either_no_data_for_crf_or_data_entry_not_started = Either data entry is not started or data was entered for some another CRF version
 
+this_user_name_does_not_exist = This user name does not exist in the database
  
