--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3070,3 +3070,18 @@ you_are_trying_to_remove_the_current_study = You are trying to remove the curren
 subjects_discrepancies = Subject's Discrepancies
 subjects_audit_log = Subject's Audit log
 subjects_case_book = Subject's Case Book
+
+# added clinovo #134
+calendared_visit = Calendared Visit
+reference_event = Reference Event
+day_schedule = Day Schedule
+day_max = Day Max
+day_min = Day Min
+day_email = Day Email
+user_name = User Name
+reference_visit_already_exist = A Reference visit already exists
+after_the_reference_visit = After the reference visit is closed, an event will be generated with a Scheduled Date on this day
+the_maximum_day_that_an_event = The maximum day that an event can be started.  Starting later raises a Query in the Discrepancy Note screen
+the_minimum_day_that_an_event = The minimum day that an event can be started.  Starting earlier raises a Query in the Discrepancy Note screen
+the_day_a_reminder_email_is = The day a reminder email is sent out about starting this Event
+use_only_a_valid_user_name = Use only a valid user name in this field
