Fixes #173 - schedules events from reference visit in calendaring event definitions.  Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@125 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -384,4 +384,11 @@ removed_crf = Case report form is removed
 either_no_data_for_crf_or_data_entry_not_started = Either data entry is not started or data was entered for some another CRF version
 
 this_user_name_does_not_exist = This user name does not exist in the database
- 
+
+a_user_has_entered_data_for_subject_min = A user has entered data for subject {0} in event {1} that was not in range for the min days set by the event
+a_user_has_entered_data_for_subject_max = A user has entered data for subject {0} in event {1} that was not in range for the max days set by the event
+data_has_enteret_too_early_in_the_calendar = Data was entered too early in the calendar
+data_has_enteret_too_late_in_the_calendaror = Data was entered too late in the calendar a_user_has_entered_data_for_subject_min = A user has entered data for subject {0} in event {1} that was not in range for the min days set by the event
+a_user_has_entered_data_for_subject_max = A user has entered data for subject {0} in event {1} that was not in range for the max days set by the event
+data_has_enteret_too_early_in_the_calendar = Data was entered too early in the calendar
+data_has_enteret_too_late_in_the_calendaror = Data was entered too late in the calendar 
