Fixes #114: All administration screens for Dynamic Events. Submitted by Igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@144 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -767,6 +767,8 @@ default = Default
 
 default_active_study = Default Active Study
 
+default_group_already_exists = Default Group already exists
+
 default_value = Default Value
 
 default_version = Default Version
