Fixes #159: Allow the specific for reasons to change. Submitted by tom (with modifications).
git-svn-id: https://svn.clinovo.com/clincapture/trunk@145 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3087,3 +3087,8 @@ the_maximum_day_that_an_event = The maximum day that an event can be started.  S
 the_minimum_day_that_an_event = The minimum day that an event can be started.  Starting earlier raises a Query in the Discrepancy Note screen
 the_day_a_reminder_email_is = The day a reminder email is sent out about starting this Event
 use_only_a_valid_user_name = Use only a valid user name in this field
+
+# added clinovo #159
+discrepancy_descriptions = Discrepancy Descriptions
+rfc_descriptions = Reason for Change Descriptions
+is_site_visible = Is Visible by Site?
