Fixes #134: Changes to Create/Update Events for Calendared Visits. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@165 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -391,4 +391,9 @@ data_has_enteret_too_early_in_the_calendar = Data was entered too early in the c
 data_has_enteret_too_late_in_the_calendaror = Data was entered too late in the calendar a_user_has_entered_data_for_subject_min = A user has entered data for subject {0} in event {1} that was not in range for the min days set by the event
 a_user_has_entered_data_for_subject_max = A user has entered data for subject {0} in event {1} that was not in range for the max days set by the event
 data_has_enteret_too_early_in_the_calendar = Data was entered too early in the calendar
-data_has_enteret_too_late_in_the_calendaror = Data was entered too late in the calendar 
+data_has_enteret_too_late_in_the_calendaror = Data was entered too late in the calendar
+
+daymax_greate_or_equal_dayschedule = Day Max should be greater or equal than Day Schedule
+daymin_less_or_equal_dayschedule = Day Min should be less or equal than Day Schedule
+daymin_less_or_equal_daymax = Day Min should be less or equal than Day Max
+dayemail_less_or_equal_dayschedule = Day Email should be less or equal than Day Schedule
