--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3082,12 +3082,13 @@ day_min = Day Min
 day_email = Day Email
 user_name = User Name
 reference_visit_already_exist = A Reference visit already exists
-after_the_reference_visit = After the reference visit is closed, an event will be generated with a Scheduled Date on this day
-the_maximum_day_that_an_event = The maximum day that an event can be started.  Starting later raises a Query in the Discrepancy Note screen
-the_minimum_day_that_an_event = The minimum day that an event can be started.  Starting earlier raises a Query in the Discrepancy Note screen
-the_day_a_reminder_email_is = The day a reminder email is sent out about starting this Event
+after_the_reference_visit = After the reference visit is closed, this event will be automatically scheduled after the number days specified here.
+the_maximum_day_that_an_event = The maximum day that an event can be manually scheduled. Scheduling this event later generates an automatic query.
+the_minimum_day_that_an_event = The minimum day that an event can be manually scheduled. Scheduling this event earlier generates an automatic query.
+the_day_a_reminder_email_is = The number of days a reminder email is sent out after the reference visit is closed.
 use_only_a_valid_user_name = Use only a valid user name in this field
-
+calendared_events_parametrs = Calendared Events Parameters
+view_calendared_events = View Calendared Events Properties
 # added clinovo #159
 discrepancy_descriptions = Discrepancy Descriptions
 rfc_descriptions = Reason for Change Descriptions
