Fixes #191: Changes to Email Days logic for Calendar functionality. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@169 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3093,3 +3093,6 @@ view_calendared_events = View Calendared Events Properties
 discrepancy_descriptions = Discrepancy Descriptions
 rfc_descriptions = Reason for Change Descriptions
 is_site_visible = Is Visible by Site?
+# ticket #191
+reminder_for_event_and_subject = Reminder for {0} event (Subject #{1})
+day_email_message_htm = <p>Dear {0},</p><p>This is a reminder to complete the Calendared Visit {1} for Subject {2} {3}.</p><p>Sincerely,</p><p>The ClinCapture team.</p>
