Fixes #113: Hide Action Icons on Matrix, excepting Completed/Currently Assigned. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@181 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -767,6 +767,8 @@ default = Default
 
 default_active_study = Default Active Study
 
+default_group = Default Group 
+
 default_group_already_exists = Default Group already exists
 
 default_value = Default Value
@@ -841,6 +843,8 @@ download_notes_in_PDF = Download notes in PDF
 download_spreadsheet = Download SpreadSheet
 
 duration = Duration
+
+dynamic_group_class = Dynamic Group Class
 
 #E-Signatures
 e_signature = E-Signatures
