Fixes #173: Updating create Event screen and DN Logic for Calendaring display. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@182 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3087,8 +3087,8 @@ day_email = Day Email
 user_name = User Name
 reference_visit_already_exist = A Reference visit already exists
 after_the_reference_visit = After the reference visit is closed, this event will be automatically scheduled after the number days specified here.
-the_maximum_day_that_an_event = The maximum day that an event can be manually scheduled. Scheduling this event later generates an automatic query.
-the_minimum_day_that_an_event = The minimum day that an event can be manually scheduled. Scheduling this event earlier generates an automatic query.
+the_maximum_day_that_an_event = The maximum day that this event can be completed. Completing this event later generates an automatic query.
+the_minimum_day_that_an_event = The minimum day that an event can be completed. Completing this event earlier generates an automatic query.
 the_day_a_reminder_email_is = The number of days a reminder email is sent out after the reference visit is closed.
 use_only_a_valid_user_name = Use only a valid user name in this field
 calendared_events_parametrs = Calendared Events Parameters
