Fixes #215: Improve the email content that is sent out on user creation. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@188 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1545,7 +1545,7 @@ parent_note = Parent Note
 
 parent_study = Parent Study
 
-password = Password\t
+password = Password
 
 password_challenge_answer = Password Challenge Answer
 
@@ -2330,7 +2330,7 @@ user_and_roles = User and Roles
 
 user_full_name = User Full Name
 
-user_name = User Name\t
+user_name = User Name
 
 user_page = User Page
 
