--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3102,3 +3102,4 @@ reminder_for_event_and_subject = Reminder for {0} event (Subject #{1})
 day_email_message_htm = <p>Dear {0},</p><p>This is a reminder to complete the Calendared Visit {1} for Subject {2} {3}.</p><p>Sincerely,</p><p>The ClinCapture team.</p>
 view_calendared_parameters = View calendared parameters for subject
 calendared_events = Calendared Events
+reference = Reference
