Fixes #270: Improve GUI for calendared events. Submitted by vitaliy (with modifications)
git-svn-id: https://svn.clinovo.com/clincapture/trunk@211 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -390,7 +390,7 @@ a_user_has_entered_data_for_subject_max = A user has entered data for subject {0
 data_has_enteret_too_early_in_the_calendar = Event was completed earlier than expected.
 data_has_enteret_too_late_in_the_calendaror = Event was completed later than expected.
 
-daymax_greate_or_equal_dayschedule = Day Max should be greater or equal than Day Schedule
+daymax_greate_or_equal_dayschedule = Day Max should be greater than or equal to Day Schedule
 daymin_less_or_equal_dayschedule = Day Min should be less or equal than Day Schedule
-daymin_less_or_equal_daymax = Day Min should be less or equal than Day Max
-dayemail_less_or_equal_dayschedule = Day Email should be less or equal than Day Schedule
+daymin_less_or_equal_daymax = Day Min should be less than or equal to Day Max
+dayemail_less_or_equal_dayschedule = Day Email should be less than or equal to Day Schedule
