--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3078,7 +3078,7 @@ subjects_audit_log = Subject's Audit log
 subjects_case_book = Subject's Case Book
 
 # added clinovo #134
-calendared_visit = Calendared Visit
+calendared_visit = Calendared
 reference_event = Reference Event
 day_schedule = Day Schedule
 day_max = Day Max
@@ -3086,10 +3086,10 @@ day_min = Day Min
 day_email = Day Email
 user_name = User Name
 reference_visit_already_exist = A Reference visit already exists
-after_the_reference_visit = After the reference visit is closed, this event will be automatically scheduled after the number days specified here.
-the_maximum_day_that_an_event = The maximum day that this event can be completed. Completing this event later generates an automatic query.
-the_minimum_day_that_an_event = The minimum day that an event can be completed. Completing this event earlier generates an automatic query.
-the_day_a_reminder_email_is = The number of days a reminder email is sent out after the reference visit is closed.
+after_the_reference_visit = Number of days this event will be automatically scheduled after the last reference event completes.
+the_maximum_day_that_an_event = Maximum days that this event can be completed after the last reference event is completed. Completing this event  later generates an automatic query.
+the_minimum_day_that_an_event = Minimum days that this event can be completed after the last reference event completes. Completing this event earlier generates an automatic query.
+the_day_a_reminder_email_is = Number of days a reminder email is sent out after the last reference visit is completed.
 use_only_a_valid_user_name = Use only a valid user name in this field
 calendared_events_parametrs = Calendared Events Parameters
 view_calendared_events = View Calendared Events Properties
