Fixes #191: Email for Calendar functionality now contains Study Name. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@245 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3099,7 +3099,7 @@ rfc_descriptions = Reason for Change Descriptions
 is_site_visible = Is Visible by Site?
 # ticket #191
 reminder_for_event_and_subject = Reminder for {0} event (Subject #{1})
-day_email_message_htm = <p>Dear {0},</p><p>This is a reminder to complete the Calendared Visit {1} for Subject {2} {3}.</p><p>Sincerely,</p><p>The ClinCapture team.</p>
+day_email_message_htm = Dear {0},<br><br>This is a reminder to complete the Calendared Visit {1} for Subject {2} in the study {3} {4}.<br><br>Sincerely,<br>The ClinCapture team.
 view_calendared_parameters = View calendared parameters for subject
 calendared_events = Calendared Events
 reference = Reference
