--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -385,8 +385,8 @@ either_no_data_for_crf_or_data_entry_not_started = Either data entry is not star
 
 this_user_name_does_not_exist = This user name does not exist in the database
 
-a_user_has_entered_data_for_subject_min = A user has entered data for subject {0} in event {1} that was not in range for the min days set by the event
-a_user_has_entered_data_for_subject_max = A user has entered data for subject {0} in event {1} that was not in range for the max days set by the event
+a_user_has_entered_data_for_subject_min = The {1} event completed sooner than expected for subject {0}
+a_user_has_entered_data_for_subject_max = The {1} event completed later than expected for subject {0}
 data_has_enteret_too_early_in_the_calendar = Event was completed earlier than expected.
 data_has_enteret_too_late_in_the_calendaror = Event was completed later than expected.
 
