--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3103,3 +3103,11 @@ day_email_message_htm = Dear {0},<br><br>This is a reminder to complete the Cale
 view_calendared_parameters = View calendared parameters for subject
 calendared_events = Calendared Events
 reference = Reference
+# ticket 324
+current_date = Current Date
+calendared_event_name = Calendared Event Name
+min_max_date_range = Min-Max Date Range
+schedule_date = Schedule Date
+user_email_date = User Email Date
+is_reference_event = is Reference Event
+reference_visit_for_event = Reference Visit for Event
