Fixes #335: Use a common signature for all system emails. Submitted by vital (with modifications)
git-svn-id: https://svn.clinovo.com/clincapture/trunk@278 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/notes.properties
@@ -707,10 +707,9 @@ rrent_active_study_is = Your current Active Study is
 your_new_openclinica_account = Your New ClinCapture Account
 your_new_openclinica_account_has_been_restored = Your ClinCapture account has been restored
 your_openclinica_account_password_reset = Your ClinCapture account password has been reset
-your_openclinica_password = your ClinCapture password
+your_openclinica_password = Your ClinCapture password
 your_password_has_been_reset_as = Your password has been reset as
 your_password_has_been_reset_on_openclinica = Your password has been reset on the ClinCapture system.  Your login information follows
-
 
 you_choose_to_restore_the_following_study = You choose to restore the following study
 
@@ -731,8 +730,6 @@ your_new_openclinica_account = Your New ClinCapture Account
 your_new_openclinica_account_has_been_restored = Your ClinCapture account has been restored
 
 your_openclinica_account_password_reset = Your ClinCapture account password has been reset
-
-your_openclinica_password = your ClinCapture password
 
 your_password_has_been_reset_as = Your password has been reset as
 
