--- a/web/src/main/config/languages/es/notes_es.properties
+++ b/web/src/main/config/languages/es/notes_es.properties
@@ -319,7 +319,7 @@ your_current_active_study_is = Su actual estudio activo es
 your_new_openclinica_account = Su Nueva Cuenta en ClinCapture
 your_new_openclinica_account_has_been_restored = Su cuenta en ClinCapture ha sido restablecida
 your_openclinica_account_password_reset = La contrase\u00F1a de su cuenta en ClinCapture ha sido reajustada
-your_openclinica_password = su contrase\u00F1a de ClinCapture
+your_openclinica_password = Su contrase\u00F1a de ClinCapture
 your_password_has_been_reset_as = Su contrase\u00F1a ha sido reajustada como
 your_password_has_been_reset_on_openclinica = Su contrase\u00F1a ha sido reajustada en el sistema de ClinCapture. A continuaci\u00F3n encontrar\u00E1 su informaci\u00F3n de registro
 # Import CRF data
