--- a/web/src/main/config/languages/fr/notes_fr.properties
+++ b/web/src/main/config/languages/fr/notes_fr.properties
@@ -300,7 +300,7 @@ your_current_active_study_is = Votre étude active est
 your_new_openclinica_account = Votre nouveau compte ClinCapture
 your_new_openclinica_account_has_been_restored = Votre compte ClinCapture a été restauré
 your_openclinica_account_password_reset = Votre mot de passe ClinCapture a été réinitialisé
-your_openclinica_password = votre mot de passe ClinCapture
+your_openclinica_password = Votre mot de passe ClinCapture
 your_password_has_been_reset_as = Votre nouveau mot de passe est
 your_password_has_been_reset_on_openclinica = Votre mot de passe ClinCapture a été réinitialisé. Voici vos informations de connexion
 
