--- a/web/src/main/config/languages/it/notes_it.properties
+++ b/web/src/main/config/languages/it/notes_it.properties
@@ -396,10 +396,9 @@ your_current_active_study_is = Il tuo studio corrente e'
 your_new_openclinica_account = Il tuo nuovo account per ClinCapture 
 your_new_openclinica_account_has_been_restored = Il tuo account per ClinCapture e' stato ripristinato.
 your_openclinica_account_password_reset = La tua password per ClinCapture e' stata cambiata 
-your_openclinica_password = la tua password per ClinCapture 
+your_openclinica_password = La tua password per ClinCapture 
 your_password_has_been_reset_as = La tua password e' stata cambiata in:
 your_password_has_been_reset_on_openclinica = La password e' stata resettata sul sistema ClinCapture.  Seguono i tuoi dati di Login
-your_openclinica_password = your ClinCapture password
 your_password_has_been_reset_as = Your password has been reset as
 your_password_has_been_reset_on_openclinica = Your password has been reset on the ClinCapture system.  Your login information follows
 
