--- a/web/src/main/config/languages/pt/notes_pt.properties
+++ b/web/src/main/config/languages/pt/notes_pt.properties
@@ -601,7 +601,7 @@ your_new_openclinica_account_has_been_restored = Sua conta do ClinCapture foi re
 
 your_openclinica_account_password_reset = Sua senha da conta do ClinCapture foi reinicializada
 
-your_openclinica_password = sua senha do ClinCapture
+your_openclinica_password = Sua senha do ClinCapture
 
 your_password_has_been_reset_as = Sua senha foi reinicializada como
 
