--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -714,7 +714,7 @@ you_choose_to_restore_the_following_study = You choose to restore the following 
 
 your_account_has_been_restored_and_password_reset = Your account on the ClinCapture system has been restored, and your password has been reset.  Your login information follows
 your_openclinica_account_password_reset = Your ClinCapture account password has been reset
-your_openclinica_password = your ClinCapture password
+your_openclinica_password = Your ClinCapture password
 your_password_has_been_reset_as = Your password has been reset as
 your_password_has_been_reset_on_openclinica = Your password has been reset on the ClinCapture system.  Your login information follows
 
