Refs #335: Use the parent study name instead of the specific site name in the email signature. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@290 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -313,7 +313,7 @@ html_email_body_4 = Your job created the file
 
 html_email_body_4_5 = , which is available <a href='
 
-html_email_body_5 = If you have any questions about this job, or you have received this message in error, please contact your system administrator for your ClinCapture instance.<br/><p>Best,<br/>System Administrator for {0}
+html_email_body_5 = If you have any questions about this job, or you have received this message in error, please contact your system administrator for your ClinCapture instance.<br/><p>Best,<br/><br/>System Administrator for {0}
 
 html_email_header_1 = <p>Dear
 
@@ -989,7 +989,7 @@ your_item_group_oid_for_form_oid = Your Item Group OID {0} for Form OID {1} does
 
 your_item_oid_for_item_group_oid = Your Item OID {0} for Item Group OID {1} does not reference a proper Item in the Item Group.
 
-your_job_ran_success_html = ,<br/>Your job ran successfully with the following messages returned.
+your_job_ran_success_html = <br/>Your job ran successfully with the following messages returned.
 
 your_listed_crf_in_the_file = Your listed Event CRF in the file {0} does not exist, or has already been locked for import.
 
@@ -1036,7 +1036,7 @@ lockout_changes_have_been_saved=The changes you made to the Lockout Configuratio
 job_ran_for=Job ran for
 job_ran_but_no_files=Job ran but no real files found.
 job_failure_for=Job FAILURE for
-your_job_ran_success_html=,<br/>Your job ran successfully with the following messages returned.
+your_job_ran_success_html=<br/>Your job ran successfully with the following messages returned.
 please_review_the_data_html=Please review the data, or modify the files accordingly so that they can be imported.<br/><br/>
 unreadable_file=Unreadable File
 your_xml_in_the_file=Your XML in the file {0} was well formed, but generated {1} metadata errors.
@@ -1223,5 +1223,5 @@ problem=Problem!
 problem_message=This CRF Item exists across different groups in more than one active CRF version:
 warning=Warning:
 warning_message=This CRF Item exists across different groups in removed CRF version(s):
-best_system_administrator = Best,<br>System Administrator for {0}
+best_system_administrator = Best,<br><br>System Administrator for {0}
 
