--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3099,7 +3099,7 @@ rfc_descriptions = Reason for Change Descriptions
 is_site_visible = Is Visible by Site?
 # ticket #191
 reminder_for_event_and_subject = Reminder for {0} event (Subject #{1})
-day_email_message_htm = Dear {0},<br><br>This is a reminder to complete the Calendared Visit {1} for Subject {2} in the study {3} {4}.<br><br>Best,<br>System Administrator for {5}.
+day_email_message_htm = Dear {0},<br><br>This is a reminder to complete the Calendared Visit {1} for Subject {2} in the study {3} {4}.<br><br>Best,<br><br>System Administrator for {5}.
 view_calendared_parameters = View calendared parameters for subject
 calendared_events = Calendared Events
 reference = Reference
