Fixes #256: Add the 'remove' status to the subject_event_status table. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@294 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -363,6 +363,7 @@ New_and_Updated = New and Updated
 
 source_data_verified = source data verified
 deleted = deleted
+removed = removed
 unlock=unlock
 
 # ClinCapture #86 "Not Closed" DN's status
