Fixes #322: Ability to reorder Dynamic Groups. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@298 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -846,6 +846,8 @@ duration = Duration
 
 dynamic_group_class = Dynamic Group Class
 
+dynamic_group_name = Dynamic Group Name
+
 #E-Signatures
 e_signature = E-Signatures
 
@@ -1516,6 +1518,8 @@ optional = Optional
 or = or
 
 order = Order
+
+order_of_dynamic_groups = Order of Dynamic Groups
 
 original = original
 
