Fixes #303: Make the Randomization CRF available for download. Submitted by markg.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@305 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/notes.properties
@@ -190,6 +190,7 @@ displaying_with_SE = Displaying {0}s with Study Events in this Study:
 download.data.to.discrepancy.notes  = To view or download all of the discrepancy notes for this study or site, please click
 
 download_CRF_excel = Download a blank CRF Excel spreadsheet
+randomization_crf_template = Randomization CRF Template
 
 download_example_CRF_from = Download example CRFs and instructions from the
 
