--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -27,6 +27,7 @@ CRF_info = CRF Header Info
 CRF_name = CRF Name
 
 CRF_spreadsheet_template = CRF Spreadsheet <br>Template
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = CRF Status
 
