--- a/web/src/main/config/languages/de/notes_de.properties
+++ b/web/src/main/config/languages/de/notes_de.properties
@@ -21,6 +21,7 @@ based_ID_subject_exist_confirm = Basierend auf der eingegebenen Personen-ID exis
 browse_by_SED = Nach Studienereignis-Definition durchsuchen
 browse_by_subject = Nach Probanden suchen
 but_no_role = aber keine Rolle.
+randomization_crf_template = Randomization CRF Template
 can_download_blank_CRF_excel = Sie können eine leere Vorlage der ClinCapture CRF-Exceldatei\t runterladen
 can_then_add_study_events_going = Anschließend können Sie Studienereignisse(Visiten oder Besuch) hinzufügen, indem Sie wie folgt vorgehen:
 can_view_items_selected_inclusion = Unten sehen Sie alle Einträge, die für den Einschluss in den Datensatz ausgewählt wurden.
