--- a/web/src/main/config/languages/de/words_de.properties
+++ b/web/src/main/config/languages/de/words_de.properties
@@ -27,6 +27,7 @@ CRF_info = CRF Informationen
 CRF_name = CRF-Name
 
 CRF_spreadsheet_template = CRF-Tabellenblatt <br>Vorlage
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = CRF Status
 
