--- a/web/src/main/config/languages/es/notes_es.properties
+++ b/web/src/main/config/languages/es/notes_es.properties
@@ -29,6 +29,7 @@ based_ID_subject_exist_confirm = Bas\u00E1ndose en la ID Global Identificativa q
 browse_by_SED = Examinar por la Definici\u00F3n de Momento de Seguimiento del Estudio
 browse_by_subject = Examinar por Sujeto
 but_no_role = pero sin rol.
+randomization_crf_template = Randomization CRF Template
 can_download_blank_CRF_excel = Puede descargar una plantilla de hoja de c\u00E1lculo Excel de ClinCapture en blanco\u0009
 can_then_add_study_events_going = Podr\u00E1 a\u00F1adir posteriormente Momentos de Seguimiento del estudio (visitas o encuentros) desde:
 can_view_items_selected_inclusion = Debajo puede ver todos los \u00EDtems seleccionados para su inclusi\u00F3n en el conjunto de datos.
