--- a/web/src/main/config/languages/es/words_es.properties
+++ b/web/src/main/config/languages/es/words_es.properties
@@ -27,6 +27,7 @@ CRF_info = Info hoja CRD
 CRF_name = Nombre de la hoja CRD:
 
 CRF_spreadsheet_template = Hoja CRD <br>Plantilla
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = Estado del CRD
 
