--- a/web/src/main/config/languages/fr/notes_fr.properties
+++ b/web/src/main/config/languages/fr/notes_fr.properties
@@ -22,6 +22,7 @@ based_ID_subject_exist_confirm = L'ID Global Patient saisi existe déjà dans le s
 browse_by_SED = Explorer par définition de visite
 browse_by_subject = Explorer par patient
 but_no_role = mais aucun rôle.
+randomization_crf_template = Randomization CRF Template
 can_download_blank_CRF_excel = Vous pouvez télécharger un modèle de CRF vide\t
 can_then_add_study_events_going = Vous pouvez maintenant ajouter des visites en allant:
 can_view_items_selected_inclusion = Ci-dessous vous pouvez voir tous les items sélectionnés dans le dataset.
