--- a/web/src/main/config/languages/fr/words_fr.properties
+++ b/web/src/main/config/languages/fr/words_fr.properties
@@ -25,6 +25,7 @@ CRF_info = Infos du CRF
 CRF_name = Nom du CRF
 
 CRF_spreadsheet_template = Modèle de CRF
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = Etat du CRF
 
