--- a/web/src/main/config/languages/it/notes_it.properties
+++ b/web/src/main/config/languages/it/notes_it.properties
@@ -31,6 +31,7 @@ browse_by_subject = Cerca per soggetto
 but_no_role = ma senza ruolo.
 browse_by_subject = Browse by Subject
 but_no_role = but no role.
+randomization_crf_template = Randomization CRF Template
 can_download_blank_CRF_excel = Puoi scaricare un template vuoto di CRF da ClinCapture\t
 can_then_add_study_events_going = Puoi aggiungere eventi di studio (visita i nostri incontri) andando:
 can_then_add_study_events_going = You can then add study events (visits or encounters) by going:
