--- a/web/src/main/config/languages/it/words_it.properties
+++ b/web/src/main/config/languages/it/words_it.properties
@@ -151,6 +151,7 @@ begin_validation = Inizio  validazione
 beginning_date = Data Inizio
 blank = Vuoto
 blank_CRF_template = Template CRF vuoto
+randomization_crf_template = Randomization CRF Template
 both = Entrambi
 brief_summary = Breve Riassunto
 #Study parameters
