--- a/web/src/main/config/languages/pt/notes_pt.properties
+++ b/web/src/main/config/languages/pt/notes_pt.properties
@@ -57,6 +57,7 @@ browse_by_subject = Navegue pelo Paciente
 
 but_no_role = mas sem fun\u00E7\u00E3o.
 
+randomization_crf_template = Randomization CRF Template
 can_download_blank_CRF_excel = Voc\u00EA pode baixar uma planilha CRF do Openclinica em branco\u0009
 
 can_then_add_study_events_going = Voc\u00EA pode adicionar eventos de Estudos (visitas ou encontros) atrav\u00E9s de:
