--- a/web/src/main/config/languages/pt/words_pt.properties
+++ b/web/src/main/config/languages/pt/words_pt.properties
@@ -26,6 +26,7 @@ CRF_info = Info. CRF
 CRF_name = Nome CRF
 
 CRF_spreadsheet_template = Modelo de planilha <br> do CRF
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = CRF Status
 
