--- a/web/src/main/config/languages/pt_MZ/words_pt_MZ.properties
+++ b/web/src/main/config/languages/pt_MZ/words_pt_MZ.properties
@@ -28,6 +28,7 @@ CRF_info = Informa\u00E7\u00E3o CRF
 CRF_name = Nome CRF
 
 CRF_spreadsheet_template = Modelo de planilha <br> do CRF
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = CRF Status
 
