--- a/web/src/main/config/languages/zh/notes_zh.properties
+++ b/web/src/main/config/languages/zh/notes_zh.properties
@@ -59,6 +59,7 @@ browse_by_subject = \u6309\u53D7\u8BD5\u8005\u6D4F\u89C8
 
 but_no_role = \u4F46\u65E0\u89D2\u8272\u3002
 
+randomization_crf_template = Randomization CRF Template
 can_download_blank_CRF_excel = \u60A8\u53EF\u4EE5\u4E0B\u8F7D\u4E00\u4E2A\u7A7A\u7684 ClinCapture CRF Excel \u7535\u5B50\u8868\u683C\u6A21\u677F\u0009
 
 can_then_add_study_events_going = \u63A5\u7740\uFF0C\u60A8\u53EF\u4EE5\u6DFB\u52A0\u7814\u7A76\u4E8B\u4EF6\uFF08\u8BBF\u89C6\uFF09\uFF1A
