--- a/web/src/main/config/languages/zh/words_zh.properties
+++ b/web/src/main/config/languages/zh/words_zh.properties
@@ -29,6 +29,7 @@ CRF_name = CRF \u540D\u79F0
 CRF_name_version = CRF\u540D\u79F0/\u7248\u672C
 
 CRF_spreadsheet_template = CRF \u7535\u5B50\u8868\u683C <br>\u6A21\u677F
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = CRF \u72B6\u6001
 
