--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -57,6 +57,7 @@ browse_by_subject = Browse by Subject
 
 but_no_role = but no role.
 
+randomization_crf_template = Randomization CRF Template
 can_download_blank_CRF_excel = You can download a blank ClinCapture CRF Excel spreadsheet template\u0009
 
 can_then_add_study_events_going = You can then add study events (visits or encounters) by going:
