--- a/web/src/main/config/languages/en/notes_en.properties
+++ b/web/src/main/config/languages/en/notes_en.properties
@@ -21,6 +21,7 @@ based_ID_subject_exist_confirm = Based on the Person ID you entered, this subjec
 browse_by_SED = Browse by Study Event Definition
 browse_by_subject = Browse by Subject
 but_no_role = but no role.
+randomization_crf_template = Randomization CRF Template
 can_download_blank_CRF_excel = You can download a blank ClinCapture CRF Excel spreadsheet template\t
 can_then_add_study_events_going = You can then add study events (visits or encounters) by going:
 can_view_items_selected_inclusion = Below you can view all items selected for inclusion in the dataset.
