--- a/web/src/main/config/languages/fa/words_fa.properties
+++ b/web/src/main/config/languages/fa/words_fa.properties
@@ -25,6 +25,7 @@ CRF_info = \u0627\u0637\u0644\u0627\u0639\u0627\u062A CRF
 CRF_name = \u0646\u0627\u0645 CRF 
 
 CRF_spreadsheet_template = \u0635\u0641\u062D\u0647 \u062F\u0627\u062F\u0647 <br> \u0642\u0627\u0644\u0628 CRF 
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = \u0648\u0636\u0639\u064A\u062A CRF 
 
