--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -29,6 +29,7 @@ More_info = More Info
 CRF_name = CRF Name
 
 CRF_spreadsheet_template = CRF Spreadsheet <br>Template
+randomization_crf_template = Randomization CRF Template
 
 CRF_status = CRF Status
 
