--- a/ws/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
+++ b/ws/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
@@ -22,6 +22,7 @@ browse_by_SED = Browse by Study Event Definition
 browse_by_subject = Browse by Subject
 but_no_role = but no role.
 can_download_blank_CRF_excel = You can download a blank ClinCapture CRF Excel spreadsheet template\t
+randomization_crf_template = You can download a randomization CRF template\t
 can_then_add_study_events_going = You can then add study events (visits or encounters) by going:
 can_view_items_selected_inclusion = Below you can view all items selected for inclusion in the dataset.
 cannot_create_event_because_no_event_definitions = You cannot create a study event in this study because there are no study event definitions in this study.
