Fixes #130: Dataset extracts do not work when symbols are in the titles. Submitted by vitaly.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@322 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -394,3 +394,6 @@ daymax_greate_or_equal_dayschedule = Day Max should be greater than or equal to 
 daymin_less_or_equal_dayschedule = Day Min should be less or equal than Day Schedule
 daymin_less_or_equal_daymax = Day Min should be less than or equal to Day Max
 dayemail_less_or_equal_dayschedule = Day Email should be less than or equal to Day Schedule
+
+# Ticket 130
+dataset_should_not_contain_any_special = The Dataset Name should not contain any special symbols, only spaces, letters and numbers.
