--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1140,6 +1140,7 @@ OCRERR_0031= You have two rule assignments with exact same target, combine and t
 OCRERR_0032= Target syntax invalid.
 OCRERR_0033= CRF is Invalid.
 OCRERR_0034= StudyEventDefinition is Invalid.
+OCRERR_0035= Expression is too long (more than 4000 characters).
 rules_Import_message1= Congratulations! Your rule import passed with no errors. Please review the rule validation results. You can save it to database by clicking "Continue".
 rules_Import_message2= Congratulations! Your rule import passed with no errors. Some existing rules or rule assignments will be updated or replaced. Please review the rule validation results. You can save it to database by clicking "Continue".
 rules_Import_message3= Your rule import had some errors. Please review the rule validation results.
