Fixes #392: Add the ability to remove a role from the user. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@374 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -39,6 +39,8 @@ are_you_sure_you_want_to_restore_this_study = Are you sure you want to restore t
 
 are_you_want_to_the_role_for = Are you sure you want to {0} the {1} role for {2}?
 
+are_you_want_to_the_role = Are you sure you want to {0} the {1} role?
+
 as_a__ = As a
 
 assign_new_user_to_current_study = Assign New User to Current Study
