--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -793,6 +793,10 @@ the_study_user_role_deleted = The study user role has been deleted.
 
 the_study_user_role_restored = The study user role has been restored.
 
+the_user_role_deleted = The user role has been deleted.
+
+you_cannot_remove_the_sysadmin_role_for_the_root_user = You cannot remove the 'system administrator' role for the root user.
+
 the_subject = The subject
 
 the_subject_group_class_created_succesfully = The subject group class was created successfully.
