Fixes #378: Fix the dataset workflow when user creates, edits, generates or downloads a dataset. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@378 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -299,6 +299,8 @@ if_created_CRF_using_excel = If you have already created a CRF using an Excel sp
 
 if_specify_month_also_specify_year = If you specify a month, you must also specify the year.
 
+if_specify_year_also_specify_month = If you specify a year, you must also specify the month.
+
 if_you_delete_CRF_version = If you delete this CRF Version, it will be permanently deleted from the system and cannot be restored. Are you sure you want to delete it?
 
 if_you_delete_this_CRF_version = If you delete this CRF Version, it will be permanently deleted from the system and cannot be restored. Are you sure you want to delete it?
