--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -409,6 +409,8 @@ no_events_within_parameters = There are no study events within the requested par
 
 no_have_correct_privilege_current_study = You don't have correct privilege in your current active study.
 
+no_have_correct_privilege_current_study_to_manage_user_roles = You don't have correct privilege in your current active study to manage user roles.
+
 no_other_studies_and_roles_available = No other studies and roles available.
 
 no_study_selected = No study selected.
