Fixes #18: Odd workflow in Subject Update when Person ID = null and DOB is incorrect. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@396 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -236,6 +236,8 @@ please_choose_a_CRF_version_to_update = Please choose a CRF to update.
 
 please_choose_a_subject_to_remove = Please choose a subject to remove.
 
+please_choose_the_gender_of_the_subject = Please choose the gender of the subject.
+
 please_choose_valid_female_subject_as_mother = Please choose a valid female subject as the mother.
 
 please_choose_valid_male_subject_as_father = Please choose a valid male subject as the father.
