--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2946,7 +2946,9 @@ that_study = logged into that study.
 
 that_site = logged into that site.
 
-view_within_crf = View within record
+view_within_crf = View within crf
+
+view_within_record = View within record
 
 rule_designer = Rule Designer
 
